feat: Validación de búsquedas y mejorado scoring de recomendación